# USD-HW2

./: AnimatedTetrahedronMesh.h  CMakeLists.txt  HW2  README.md  hw2.usda
